--- a/ex1.html
+++ b/ex1.html
@@ -1,5 +1,7 @@
 <html>
   <body>
         Simple file 1 
-         </body>
+    
+    <p><a href="https://upulg.github.io">Go to home </a></p>
+  </body>
 </html>
