--- a/kb_A_series/kb_A_series.html
+++ b/kb_A_series/kb_A_series.html
@@ -1,7 +1,21 @@
 <html>
 
+<head>
+    <a href="..">home</a>
+</head>
+
 <body>
     embed youtube
+
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tVzsAkIQi1Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </p>
+
+    <p></p>
+
+    <a href="https://www.youtube.com/playlist?list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx">Full playlist</a>
+
+
 </body>
 
 </html>
