--- a/kb_A_series/kb_A_series.html
+++ b/kb_A_series/kb_A_series.html
@@ -15,6 +15,30 @@
 
     <a href="https://www.youtube.com/playlist?list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx">Full playlist</a>
 
+    <p>
+
+    </p>
+
+
+    <h3 class="style-scope ytd-playlist-video-renderer" aria-label="තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004 by Way To Nibbana අභිධර්මය දේශනා Streamed 2 years ago 2 hours, 28 minutes 1,886 views">
+        <ytd-badge-supported-renderer id="top-standalone-badge" class="style-scope ytd-playlist-video-renderer" system-icons="">
+            <!--css-build:shady-->
+            <dom-repeat id="repeat" as="badge" class="style-scope ytd-badge-supported-renderer"><template is="dom-repeat"></template></dom-repeat>
+        </ytd-badge-supported-renderer>
+        <a id="video-title" class="yt-simple-endpoint style-scope ytd-playlist-video-renderer" href="/watch?v=qnkMMSwSNdc&amp;list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx&amp;index=4" title="තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004">
+      තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004
+    </a>
+    </h3>
+
+
+    <p>තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A001</p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A002 තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A004
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qnkMMSwSNdc" frameborder="0" allowfullscreen></iframe>
+    </p>
 
 </body>
 
