--- a/kb_A_series/kb_A_series.html
+++ b/kb_A_series/kb_A_series.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    embed youtube
+    <h1>තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා</h1>
+
 
     <p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/tVzsAkIQi1Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -13,33 +14,170 @@
 
     <p></p>
 
-    <a href="https://www.youtube.com/playlist?list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx">Full playlist</a>
+    <a href="https://www.youtube.com/playlist?list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx">Full playlist in YouTube</a>
 
     <p>
 
     </p>
 
 
-    <h3 class="style-scope ytd-playlist-video-renderer" aria-label="තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004 by Way To Nibbana අභිධර්මය දේශනා Streamed 2 years ago 2 hours, 28 minutes 1,886 views">
-        <ytd-badge-supported-renderer id="top-standalone-badge" class="style-scope ytd-playlist-video-renderer" system-icons="">
-            <!--css-build:shady-->
-            <dom-repeat id="repeat" as="badge" class="style-scope ytd-badge-supported-renderer"><template is="dom-repeat"></template></dom-repeat>
-        </ytd-badge-supported-renderer>
-        <a id="video-title" class="yt-simple-endpoint style-scope ytd-playlist-video-renderer" href="/watch?v=qnkMMSwSNdc&amp;list=PLqESXbJ82aIip-TA7Efg5JjwmEDJ95kAx&amp;index=4" title="තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004">
-      තුන්කල්හි වෙනස් නොවන ලොව  එකම විශ්ව දර්ශනය - දේශනා අංක A004
-    </a>
-    </h3>
-
-
-    <p>තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A001</p>
+    <table>
+        <td>
+            තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A001
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VfL-nr_jXoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </td>
+        <td>
+            <p>
+                තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A002
+            </p>
+        </td>
+        <td>
+            <p>
+                තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+            </p>
+        </td>
+        <td>
+            <p>
+                තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A004
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qnkMMSwSNdc" frameborder="0" allowfullscreen></iframe>
+            </p>
+        </td>
+    </table>
     <p>
-        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A002 තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A005
     </p>
     <p>
-        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A004
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qnkMMSwSNdc" frameborder="0" allowfullscreen></iframe>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A006
     </p>
-
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A007
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A008
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A009
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A010
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A011
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A012
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A013
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A014
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A015
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
+    <p>
+        තුන්කල්හි වෙනස් නොවන ලොව එකම විශ්ව දර්ශනය - දේශනා අංක A003
+    </p>
 </body>
 
 </html>
